one page new interface;

--- a/NewMainScene/.editor/project.json
+++ b/NewMainScene/.editor/project.json
@@ -1,3 +1,4 @@
 {
-  "id": "95c959e8-8123-4296-862e-c2a28ff9867c"
+  "id": "95c959e8-8123-4296-862e-c2a28ff9867c",
+  "skipPublishWarning": false
 }
